--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
-    "test": "mocha tests",
-    "test:debug": "mocha --no-timeouts debug tests",
+    "test": "mocha dist/tests",
+    "test:debug": "mocha --no-timeouts debug dist/tests",
     "prepublish": "npm run build",
-    "build": "tsc && rollup -c && sorcery -i dist/plugin.js"
+    "build": "tsc"
   },
   "files": [
     "dist/*",
-    "lib/*.d.ts",
     "index.js",
     "index.d.ts"
   ],
@@ -49,19 +48,23 @@
     "typescript": ">=1.8.0"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/mkdirp": "^0.3.29",
+    "@types/mocha": "^2.2.38",
     "@types/node": "^6.0.52",
+    "@types/rimraf": "^0.0.28",
     "broccoli": "^0.16.3",
     "chai": "^3.5.0",
     "ensure-posix-path": "^1.0.1",
-    "fixturify": "^0.3.0",
+    "fixturify": "^0.3.2",
     "fs-extra": "^0.30.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.1.0",
-    "rimraf": "^2.4.2",
+    "rimraf": "^2.5.4",
     "rollup": "^0.36.1",
     "rollup-plugin-buble": "^0.14.0",
     "sorcery": "^0.10.0",
     "tslint": "^4.0.2",
-    "typescript": "~2.1.4"
+    "typescript": "^2.1.5"
   }
 }
