--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
     "newLine": "LF",
     "outDir": "dist",
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "typeRoots": [
+      "node_modules/@types",
+      "types"
+    ]
   },
   "include": [
     "index.ts",
